# ECE1724_Project

./: .gitignore  README.md
12.10 p2p_sys withdownload/src/: node.rs
12.10 p2p_sys withdownload/src/node/: chunker.rs
Documents/: Final_report.md  Proposal.md
Project Proposal/: Final_report.md  Motivation  Motivation.md  Proposal.md  objective_keyFeature  objective_keyFeature.md  tentative_plan_5wk.md
p2p_sys/: Cargo.toml
p2p_sys with chunking/src/: node.rs
p2p_sys with chunking/src/node/: protocol.rs  storage_manager.rs
p2p_sys/src/: chunker.rs  main.rs  node.rs  storage_manager.rs
p2p_sys/src/node/: file_operations.rs
p2p_sys_v1.0/: ab.txt
p2p_sys_v2.0/chunks/: abc.txt
p2p_sys_v2.0/src/: node.rs
p2p_sys_v2.0/src/node/: chunker.rs  utils.rs
src/: main.rs  node.rs
src/node/: chunker.rs  file_operations.rs  storage_manager.rs
