[package]
name = "p2p_sys"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio = {  version = "1.38", features = ["full"] }
async-trait = "0.1"
futures =  "0.3.30" 
libp2p = { version = "0.54.1",features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "request-response"] }
tracing = "0.1.37"
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
clap = { version="4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15.1"
dirs = "5.0"
bincode = "1.3"
